--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
